--- a/Translations/WinMerge/Slovenian.po
+++ b/Translations/WinMerge/Slovenian.po
@@ -46,7 +46,7 @@ msgid "Copy fro&m Right"
 msgstr "Kopiraj iz de&sne"
 
 msgid "&Select Line Difference\tF4"
-msgstr ""
+msgstr "Izbe&ri vrstico ralike"
 
 #, c-format
 msgid "&Undo"
@@ -69,7 +69,7 @@ msgid "&Paste"
 msgstr "&Prilepi"
 
 msgid "&Go to...\tCtrl+G"
-msgstr ""
+msgstr "Po&jdi na...\tCtrl+"
 
 msgid "Go to Moved Line Between Left and Middle\tCtrl+Shift+G"
 msgstr "Pojdi na premaknjeno vrstico med levo in srednjo\tCtrl+Shift+G"
@@ -179,7 +179,7 @@ msgid "&Vertical Wipe"
 msgstr "Obriši na&vpično"
 
 msgid "&Horizontal Wipe"
-msgstr "Obriši vodo&ravno"
+msgstr "Varno izbriši vodo&ravno"
 
 #, c-format
 msgid "&Set Background Color"
@@ -228,7 +228,7 @@ msgid "< Empty >"
 msgstr "< Prazno >"
 
 msgid "E&xit\tCtrl+Q"
-msgstr ""
+msgstr "&Izhod\tCtrl+Q"
 
 #, c-format
 msgid "&Edit"
@@ -284,7 +284,7 @@ msgstr "&Vtičniki"
 
 #, c-format
 msgid "P&lugin Settings..."
-msgstr "Nasta&vitve vtičnika..."
+msgstr "Nastavi&tve vtičnika..."
 
 #, c-format
 msgid "Ma&nual Prediffer"
@@ -311,7 +311,7 @@ msgid "&Window"
 msgstr "&Okno"
 
 msgid "Cl&ose\tCtrl+W"
-msgstr ""
+msgstr "&Zapri\tCtrl+W"
 
 #, c-format
 msgid "Clo&se All"
@@ -319,23 +319,23 @@ msgstr "Zapri &vse"
 
 #, c-format
 msgid "Change &Pane\tF6"
-msgstr "Spremeni &okna\tF6"
+msgstr "Spremeni pod&okna\tF6"
 
 #, c-format
 msgid "Tile &Horizontally"
-msgstr "Vodoravna &okna"
+msgstr "Vodoravna pod&okna"
 
 #, c-format
 msgid "Tile &Vertically"
-msgstr "&Navpična okna"
+msgstr "&Navpična podokna"
 
 #, c-format
 msgid "&Cascade"
-msgstr "&Kaskadna okna"
+msgstr "S&topničasta podokna"
 
 #, c-format
 msgid "&Help"
-msgstr "&Pomoč"
+msgstr "Po&moč"
 
 #, c-format
 msgid "&WinMerge Help\tF1"
@@ -351,7 +351,7 @@ msgstr "P&revodi"
 
 #, c-format
 msgid "C&onfiguration"
-msgstr "&Dnevnik nastavitev"
+msgstr "&Nastavitve"
 
 #, c-format
 msgid "&GNU General Public License"
@@ -395,15 +395,15 @@ msgstr "Prikaži &različne vnose"
 
 #, c-format
 msgid "Show L&eft Unique Items"
-msgstr "Prikaži l&eve unikatne vnose"
+msgstr "Prikaži l&eve edinstvene vnose"
 
 #, c-format
 msgid "Show Midd&le Unique Items"
-msgstr "Prikaži unikatne vnose na s&rednji"
+msgstr "Prikaži uedinstvene vnose v s&rednji"
 
 #, c-format
 msgid "Show Ri&ght Unique Items"
-msgstr "Prikaži d&esne unikatne vnose"
+msgstr "Prikaži d&esne edinstvene vnose"
 
 #, c-format
 msgid "Show S&kipped Items"
@@ -566,7 +566,7 @@ msgid "Save &Right As..."
 msgstr "Shrani l&evo kot..."
 
 msgid "&Print...\tCtrl+P"
-msgstr ""
+msgstr "Na&tisni...\tCtrl+P"
 
 msgid "Page Set&up..."
 msgstr "Nastavitev &strani..."
@@ -576,7 +576,7 @@ msgstr "&Predogled tiskanja..."
 
 #, c-format
 msgid "&Convert Line Endings to"
-msgstr "&Pretvori konce vrstic v"
+msgstr "&Pretvori konce vrstic (KnV) v"
 
 #, c-format
 msgid "Mer&ge Mode\tF9"
@@ -730,15 +730,15 @@ msgstr "Prikaz &KnV"
 
 #, c-format
 msgid "Vie&w Line Differences"
-msgstr "Prikaži razl&ike vrstic"
+msgstr "Prikaz razl&ike vrstic"
 
 #, c-format
 msgid "View Line &Numbers"
-msgstr "Prikaži številke &vrstic"
+msgstr "Prikaz številke &vrstic"
 
 #, c-format
 msgid "View &Margins"
-msgstr "Prikaži &robove"
+msgstr "Prikaz &robov"
 
 #, c-format
 msgid "W&rap Lines"
@@ -878,7 +878,7 @@ msgstr "Pr&vi levi vnos z drugim levim vnosom"
 
 #, c-format
 msgid "First &right item with second right item"
-msgstr "Prvi&desni vnos z drugim desnim vnosom"
+msgstr "Prvi &desni vnos z drugim desnim vnosom"
 
 #, c-format
 msgid "&First left item with second right item"
@@ -1064,7 +1064,7 @@ msgid "Auto prediffer"
 msgstr "Samodejni predogled razlik"
 
 msgid "G&o to Diff"
-msgstr ""
+msgstr "Poj&di na razliko"
 
 #, c-format
 msgid "&No Moved Blocks"
@@ -1147,7 +1147,7 @@ msgid "About WinMerge"
 msgstr "Vizitka"
 
 msgid "Visit the WinMerge Homepage!"
-msgstr ""
+msgstr "Obišči domačo stran WinMerge!"
 
 #, c-format
 msgid "OK"
@@ -1276,7 +1276,7 @@ msgstr "Ob zagonu prikaži okno 'Izberi datoteke ali mape'"
 
 #, c-format
 msgid "Close \"Select Files or Folders\" Dialog on clicking OK button"
-msgstr "Zapri okno 'Izberi datoteke ali mape' s klikom na gumb Vredu"
+msgstr "Zapri okno 'Izberi datoteke ali mape' s klikom na gumb 'Vredu'"
 
 #, c-format
 msgid "O&pen-dialog Auto-Completion:"
@@ -1295,7 +1295,7 @@ msgstr "Ponastavi"
 
 #, c-format
 msgid "Find"
-msgstr "Najdi"
+msgstr "Poišči"
 
 #, c-format
 msgid "Fi&nd what:"
@@ -1303,7 +1303,7 @@ msgstr "&Kaj naj iščem:"
 
 #, c-format
 msgid "Match &whole word only"
-msgstr "Ujemanje le &celih besed"
+msgstr "Ujemaj le &celotne besede"
 
 #, c-format
 msgid "Match &case"
@@ -1330,7 +1330,7 @@ msgid "Find &Prev"
 msgstr "Najdi pre&jšnje"
 
 msgid "&OK"
-msgstr ""
+msgstr "&Vredu"
 
 #, c-format
 msgid "Replace"
@@ -1338,7 +1338,7 @@ msgstr "Zamenjaj"
 
 #, c-format
 msgid "Re&place with:"
-msgstr "Zamenjaj z:"
+msgstr "&Zamenjaj z:"
 
 #, c-format
 msgid "&Don't wrap end of file"
@@ -1354,7 +1354,7 @@ msgstr "&Izbor"
 
 #, c-format
 msgid "Wh&ole file"
-msgstr "&Cela datoteka"
+msgstr "&Celotnwa datoteka"
 
 msgid "Find Pre&v"
 msgstr "Zamenjaj pre&jšnjo"
@@ -1628,17 +1628,17 @@ msgid "Items total:"
 msgstr "Skupaj vnosov:"
 
 msgid "Go to"
-msgstr ""
+msgstr "Pojdi na"
 
 msgid "G&o to:"
-msgstr ""
+msgstr "Po&jdi na:"
 
 #, c-format
 msgid "File"
 msgstr "Datoteka"
 
 msgid "Go to what"
-msgstr ""
+msgstr "Pojdi na (kaj)"
 
 #, c-format
 msgid "Li&ne"
@@ -1649,7 +1649,7 @@ msgid "&Difference"
 msgstr "&Razlika"
 
 msgid "&Go to"
-msgstr ""
+msgstr "Poj&di na"
 
 #, c-format
 msgid "Compare"
@@ -1844,7 +1844,7 @@ msgstr "Glede na uporabniški vmesnik WinMerge"
 
 #, c-format
 msgid "Custom codepage:"
-msgstr "Poljubna kodna stran:"
+msgstr "Kodna stran po meri:"
 
 #, c-format
 msgid "Options"
@@ -1920,7 +1920,7 @@ msgstr "Uporabn. določen3:"
 
 #, c-format
 msgid "Folder Compare Report"
-msgstr "Poročilo primerjanja datotek"
+msgstr "Poročilo primerjave datotek"
 
 msgid "Report &File:"
 msgstr "Datoteka &Poročila:"
@@ -2726,7 +2726,7 @@ msgstr "Datoteka ni razpakirana: %1"
 
 #, c-format
 msgid "Cannot open file\n%1\n\n%2"
-msgstr ""
+msgstr "Ni bilo mogoče odpreti datoteke\n%1\n\n%2"
 
 #, c-format
 msgid "Failed to parse conflict file."
@@ -2749,7 +2749,7 @@ msgstr "Shrani spremembe v %1?"
 
 #, c-format
 msgid "%1 is marked read-only. Would you like to override the read-only file? (No to save as new filename.)"
-msgstr "%1 je označena Samo-za- branje. Ali želite preglasiti datoteko Samo-za- branje? ('Ne', za shranjevanje pod novim imenom)"
+msgstr "%1 je označena Samo-za-branje. Ali želite preglasiti datoteko Samo-za-branje? ('Ne', za shranjevanje pod novim imenom)"
 
 #, c-format
 msgid "Error backing up file"
@@ -2761,7 +2761,7 @@ msgstr "Izvirne datoteke ni mogoče varnostno kopirati:\n%1\n\nVseeno nadaljujem
 
 #, c-format
 msgid "Saving file failed.\n%1\n%2\nDo you want to:\n\t- use a different filename (Press OK)\n\t- abort the current operation (Press Cancel)?"
-msgstr "Ni uspelo shranjevanje.\n%1\n%2\nAli želite:\n\t- uporabiti drugačno ime datoteke (Pritisnite Vredu)\n\t- prekiniti trenutno operacijo (Pritisnite Prekliči)?"
+msgstr "Ni uspelo shranjevanje.\n%1\n%2\nAli želite:\n\t- uporabiti drugačno ime datoteke (Pritisnite 'Vredu')\n\t- prekiniti trenutno operacijo (Pritisnite 'Prekliči')?"
 
 #, c-format
 msgid "Plugin '%2' cannot pack your changes to the left file back into '%1'.\n\nThe original file will not be changed.\n\nDo you want to save the unpacked version to another file?"
@@ -3331,7 +3331,7 @@ msgstr "Datoteka Poročila že obstaja. Ali jo želite prepisati?"
 
 #, c-format
 msgid "Error creating the report:\n%1"
-msgstr ""
+msgstr "Napaka pri ustvarjanju proročila:\n%1"
 
 #, c-format
 msgid "The report has been created successfully."
@@ -3508,7 +3508,7 @@ msgid "Folder does not exist."
 msgstr "Mapa ne obstaja."
 
 msgid "Archive support is not enabled.\nAll needed components (7-Zip and/or Merge7z*.dll) for archive support cannot be found.\nSee manual for more info about archive support and how to enable it."
-msgstr ""
+msgstr "Podpora za arhiv ni omogočena.\nBi mogoče najti vseh potrebnih sestavin (7-Zip in/ali Merge7z*.dll) za podporo arhivov.\nGlejte priročnik za več informacij o podpori arhivov in kako jo omogočiti."
 
 #, c-format
 msgid "Select file for export"
@@ -3642,7 +3642,7 @@ msgid "\nAuto Merge (Ctrl+Alt+M)"
 msgstr "\nSamodejno združi (Ctrl+Alt+M)"
 
 msgid "The adapted unpacker is applied to both files (one file only needs the extension)."
-msgstr "Prilagojen razpakovalec se uporablja za obe datoteki (samo ena datoteka potrebuje končnico)."
+msgstr "Prilagojen razpakovalec se uporablja za obe datoteki (le ena datoteka potrebuje končnico)."
 
 #, c-format
 msgid "No prediffer (normal)"
@@ -3689,7 +3689,7 @@ msgstr "<Samodejno>"
 
 #, c-format
 msgid "G&o to Line %1"
-msgstr ""
+msgstr "P&ojdi na vrstico %1"
 
 msgid "Go to Moved Line\tCtrl+Shift+G"
 msgstr "Pojdi na premaknjeno vrstico\tCtrl+Shift+G"
@@ -3704,7 +3704,7 @@ msgstr "Iz datotečnega sistema"
 
 #, c-format
 msgid "From Most Recently Used list"
-msgstr "Iz seznama nedavnih (MRU)"
+msgstr "Iz seznama nedavno uporabljenih"
 
 #, c-format
 msgid "No Highlighting"
@@ -3750,7 +3750,7 @@ msgid "Enable &Auto Max Width"
 msgstr "Omogoči sa&modejno največjo širino"
 
 msgid "Frhed is not installed."
-msgstr ""
+msgstr "Frhed ni nameščen"
 
 #, c-format
 msgid "%1 does not exist. Do you want to create it?"
